<resources>
    <string name="app_name">Right Weight</string>
    <string name="app_icon_image">Right Weight 아이콘</string>
    <string name="home">홈</string>
    <string name="calendar">달력</string>
    <string name="share">공유</string>
    <string name="management">관리</string>
    <string name="day_add">Day 추가</string>
    <string name="day_remove">Day 삭제</string>
    <string name="exercise_add">운동 추가</string>
    <string name="set_weight_kg">kg</string>
    <string name="set_number">회</string>
    <string name="remove">삭제</string>
    <string name="set_add">세트 추가</string>
    <string name="day_order">Day%d</string>
    <string name="input_exercise_name">운동이름을 입력하세요</string>
    <string name="input_routine_name">루틴이름을 입력해 주세요</string>
    <string name="input_routine_description">루틴에 대한 설명을 입력해 주세요</string>
    <string name="editor_back_pressed_message">현재 작성된 내용이 사라집니다. 이전 화면으로 돌아가도 괜찮으시겠습니까?</string>
    <string name="logout">로그아웃</string>
    <string name="withdraw">회원탈퇴</string>
    <string name="detail">상세</string>
    <string name="editor">생성/수정</string>
    <string name="search">검색</string>
    <string name="edit">수정</string>
    <string name="more">더보기</string>
    <string name="start_exercise">운동 시작</string>
    <string name="submit">확인</string>
    <string name="cancel">취소</string>
    <string name="logout_message">로그아웃 하시겠습니까?</string>
    <string name="withdraw_message">정말 탈퇴하시겠습니까?</string>
    <string name="home_description">%s\n오늘 수행할 운동은</string>
    <string name="home_run_exercise_description">%s\n오늘 운동 진행중입니다</string>
    <string name="home_end_exercise_description">%s\n오늘 운동을 완료했습니다</string>
    <string name="date_format">yyyy년 MM월 dd일</string>
    <string name="empty_routine">루틴을 선택해주세요.</string>
    <string name="routine_title">루틴 명</string>
    <string name="routine_description">설명</string>
    <string name="routine_save">루틴 저장하기</string>
    <string name="shared_routine_author">작성자</string>
    <string name="shared_routine_modified_date">작성일</string>
    <string name="shared_routine_shared_count">공유된 횟수</string>
    <string name="chest">가슴</string>
    <string name="back">등</string>
    <string name="leg">하체</string>
    <string name="shoulder">어깨</string>
    <string name="biceps">이두</string>
    <string name="triceps">삼두</string>
    <string name="core">코어</string>
    <string name="forearm">전완근</string>
    <string name="cardio">유산소</string>
    <string name="end_exercise">운동 종료</string>
    <string name="reset">초기화</string>
    <string name="reset_message">루틴이 Day1부터 시작됩니다. 초기화 하시겠습니까?</string>
    <string name="create_routine">루틴 생성</string>
    <string name="routine_management_info">현재 선택된 루틴은</string>
    <string name="move_up">위로</string>
    <string name="move_down">아래로</string>
    <string name="routine_select">루틴 선택 하기</string>
    <string name="routine_copy">복사하여 내 루틴목록으로 가져오기</string>
    <string name="expand">확장</string>
    <string name="exercise_time">운동한 시간: %s</string>
    <string name="history_none">운동기록이 없습니다.</string>
    <string name="routine_remove_message">"삭제 하시겠습니까?"</string>
    <string name="selected_routine_remove_message">"현재 선택된 루틴 입니다. 삭제 하시겠습니까?"</string>
    <string name="end_exercise_message">달성하지 않은 항목이 있습니다. \n 정말 운동을 종료하시겠습니까?</string>
    <string name="stopwatch">stopwatch start and pause</string>
    <string name="profile_image_description">프로필 이미지</string>
    <string name="wrong_connection">인터넷 연결을 확인해주세요.</string>
    <string name="none_routine">가져올 루틴이 없습니다.</string>
    <string name="success_save_routine">루틴이 저장되었습니다.</string>
    <string name="routine_title_empty">루틴명을 입력해주세요.</string>
    <string name="routine_description_empty">루틴 설명을 입력해주세요.</string>
    <string name="exercise_title_empty">입력되지 않은 운동명이 있습니다.</string>
    <string name="day_empty">Day가 최소 1개는 있어야 합니다.</string>
    <string name="exercise_empty">각 Day에 운동이 최소 1개는 있어야 합니다.</string>
    <string name="exercise_set_empty">각 운동에 세트가 최소 1개는 있어야 합니다.</string>
    <string name="exceed_max_day_size">Day의 개수는 10개를 넘을 수 없습니다.</string>
    <string name="exceed_max_exercise_size">운동의 개수는 10개를 넘을 수 없습니다.</string>
    <string name="exceed_max_exercise_set_size">세트의 개수는 10개를 넘을 수 없습니다.</string>
    <string name="go_routine_detail">보러가기</string>
    <string name="success_backup">운동 기록과 루틴 정보가 저장 되었습니다.</string>
    <string name="return_back">돌아가기</string>
    <string name="msg_selected_routine">%s이 선택되었습니다.</string>
    <string name="complete_share_message">루틴이 공유되었습니다.</string>
    <string name="backup_user_info">내 정보 백업</string>
    <string name="backup_message">"지금 상태의 정보를 저장하시겠습니까?"</string>
    <string name="modified_date_sort">"최신순"</string>
    <string name="shared_count_sort">"공유 횟수순"</string>
    <string name="restore_loading_message">데이터를 복원하는 중 입니다.</string>
    <string name="backup_loading_message">데이터를 백업하는 중 입니다.</string>
    <string name="get_loading_message">데이터를 가져오는 중 입니다</string>
    <string name="retry_message">다시 시도해주세요.</string>
</resources>