<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.routine.editor.RoutineEditorFragment">

    <data>

        <variable
            name="viewModel"
            type="com.lateinit.rightweight.ui.routine.editor.RoutineEditorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintBottom_toTopOf="@id/button_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_view_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/routine_title"
                    android:textAppearance="@style/Text.Medium.Bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_edit_text_title"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_routine_name"
                        android:text="@={viewModel.routineTitle}"
                        android:textAppearance="@style/Text.Small" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/text_view_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/routine_description"
                    android:textAppearance="@style/Text.Medium.Bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_edit_text_title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_edit_text_description"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/text_view_description"
                    app:layout_constraintTop_toBottomOf="@id/text_view_description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_routine_description"
                        android:text="@={viewModel.routineDescription}"
                        android:textAppearance="@style/Text.Small" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_day"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toTopOf="@id/button_remove_day"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_edit_text_description"
                    tools:listitem="@layout/item_day" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_remove_day"
                    style="@style/Text.Small.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.removeDay()}"
                    android:text="@string/day_remove"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@id/button_add_day"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_view_day" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_add_day"
                    style="@style/Text.Small.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.addDay()}"
                    android:text="@string/day_add"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/button_remove_day"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_view_day" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_exercise"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_remove_day"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_exercise" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_exercise_add"
                    style="@style/Text.Small.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="300dp"
                    android:backgroundTint="@color/secondaryColor"
                    android:onClick="@{()->viewModel.addExercise()}"
                    android:padding="16dp"
                    android:text="@string/exercise_add"
                    app:icon="@drawable/ic_add"
                    app:iconGravity="textStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_view_exercise" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:padding="16dp"
            android:text="@string/routine_save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>